// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dev/Facets Combination of facets 1`] = `
<div
  class="fd-facet-group"
  role="group"
>
  
        
  <div
    class="fd-facet fd-facet--image fd-margin-end--md"
  >
    
            
    <span
      aria-label="Avatar"
      class="fd-avatar fd-avatar--l"
    >
      
                
      <i
        class="fd-avatar__icon sap-icon--money-bills"
        role="presentation"
      />
      
            
    </span>
    
        
  </div>
  
        
  <div
    aria-labelledby="formFacetTitle1"
    class="fd-facet fd-facet--form fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
            
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="formFacetTitle1"
    >
      Technical Data
    </h1>
    
            
    <div
      class="fd-facet__container fd-margin-bottom--tiny"
    >
      
                
      <label
        class="fd-form-label"
        for="form-value-05"
      >
        Base unit:
      </label>
      
                
      <div
        class="fd-text"
        id="form-value-05"
      >
        Each
      </div>
      
            
    </div>
    
            
    <div
      class="fd-facet__container fd-margin-bottom--tiny"
    >
      
                
      <label
        class="fd-form-label"
        for="form-value-06"
      >
        Length:
      </label>
      
                
      <div
        class="fd-text"
        id="form-value-06"
      >
        23.24 Centimeter
      </div>
      
            
    </div>
    
            
    <div
      class="fd-facet__container fd-margin-bottom--tiny"
    >
      
                
      <label
        class="fd-form-label"
        for="form-value-07"
      >
        Width:
      </label>
      
                
      <div
        class="fd-text"
        id="form-value-07"
      >
        86.1 Centimeter
      </div>
      
            
    </div>
    
            
    <div
      class="fd-facet__container"
    >
      
                
      <label
        class="fd-form-label"
        for="form-value-08"
      >
        Height:
      </label>
      
                
      <div
        class="fd-text"
        id="form-value-08"
      >
        20.8 Centimeter
      </div>
      
            
    </div>
    
        
  </div>
  
        
  <div
    aria-labelledby="kvFacetTitle1"
    class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
            
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="kvFacetTitle1"
    >
      Status
    </h1>
    
            
    <span
      class="fd-object-status fd-object-status--positive fd-object-status--large fd-facet__object-status"
    >
      
                
      <span
        class="fd-object-status__text fd-facet__object-status-text"
      >
        Delivery
      </span>
      
            
    </span>
    
        
  </div>
  
        
  <div
    aria-labelledby="kvFacetTitle2"
    class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
            
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="kvFacetTitle2"
    >
      Delivery Time
    </h1>
    
            
    <span
      class="fd-object-status fd-object-status--large fd-object-status--critical fd-facet__object-status"
    >
      
                
      <i
        class="fd-object-status__icon sap-icon--shipping-status fd-padding--none fd-margin-end--tiny"
        role="presentation"
      />
      
                
      <span
        class="fd-object-status__text fd-facet__object-status-text"
      >
        12 days
      </span>
      
            
    </span>
    
        
  </div>
  
        
  <div
    aria-labelledby="kvFacetTitle3"
    class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
            
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="kvFacetTitle3"
    >
      Assembly Option 
    </h1>
    
            
    <span
      class="fd-object-status fd-object-status--negative fd-object-status--large fd-facet__object-status"
    >
      
                
      <span
        class="fd-object-status__text fd-facet__object-status-text"
      >
        To be selected
      </span>
      
            
    </span>
    
        
  </div>
  
        
  <div
    aria-labelledby="kvFacetTitle4"
    class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
            
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="kvFacetTitle4"
    >
      Pricing 
    </h1>
    
            
    <span
      class="fd-object-number fd-object-number--large fd-object-number--informative"
    >
      
                
      <span
        class="fd-object-number__text"
      >
        579
      </span>
      <span
        class="fd-object-number__unit"
      >
        EUR
      </span>
      
            
    </span>
    
        
  </div>
  

        
  <div
    aria-labelledby="ratingFacetTitle1"
    class="fd-facet fd-facet--rating-indicator fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
            
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="ratingFacetTitle1"
    >
      Average User Rating
    </h1>
    
            
    <h2
      class="fd-form-label"
    >
      6 reviews
    </h2>
    
            
    <div
      class="fd-rating-indicator fd-facet__container"
    >
      
                
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container fd-facet__rating-container"
      >
        
                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-5-1"
          name="rating-max-value-5"
          type="radio"
          value="1"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-1"
        />
        

                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-max-value-5-2"
          name="rating-max-value-5"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-2"
        />
        

                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-5-3"
          name="rating-max-value-5"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-3"
        />
        

                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-5-4"
          name="rating-max-value-5"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-4"
        />
        

                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-5-5"
          name="rating-max-value-5"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-5"
        />
        
                
      </div>
      
                
      <span
        class="fd-rating-indicator__dynamic-text fd-facet__rating-dynamic-text fd-margin-top--tiny"
      >
        (2 of 5)
      </span>
      
            
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Dev/Facets Facets in Object Page 1`] = `
<section
  aria-label="Dynamic Page Desktop Example"
  class="fd-dynamic-page fd-dynamic-page--xl"
>
  
        
  <header
    class="fd-dynamic-page__header"
  >
    
            
    <div
      aria-hidden="false"
      class="fd-dynamic-page__title-area"
      id="mainContainer"
      tabindex="0"
    >
      
                
      <div
        class="fd-dynamic-page__main-container"
      >
        
                    
        <div
          class="fd-dynamic-page__breadcrumb-title-container"
        >
          
                        
          <nav
            aria-label="Breadcrumbs"
          >
            
                            
            <ul
              class="fd-dynamic-page__breadcrumb fd-breadcrumb"
            >
              
                                
              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Men
                </a>
              </li>
              
                                
              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Shoes
                </a>
              </li>
              
                                
              <li
                class="fd-breadcrumb__item"
              >
                <a
                  aria-current="page"
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Running Shoes
                </a>
              </li>
              
                            
            </ul>
            
                        
          </nav>
          
                        
          <div
            class="fd-dynamic-page__title-container"
          >
            
                            
            <h1
              class="fd-title fd-dynamic-page__title"
              title="Balenciaga Triple S Trainers"
            >
               Balenciaga Triple S Trainers 
            </h1>
            
                            
            <div
              class="fd-dynamic-page__toolbar-container"
            >
              
                                
              <div
                aria-label="Product actions"
                class="fd-dynamic-page__toolbar fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >
                
                                    
                <button
                  class="fd-button fd-button--compact fd-button--positive"
                >
                  Accept
                </button>
                
                                    
                <button
                  class="fd-button fd-button--compact fd-button--reject"
                >
                  Reject
                </button>
                
                                    
                <span
                  class="fd-toolbar__separator"
                />
                
                                    
              </div>
              
                                
              <div
                aria-label="Navigation actions"
                class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar--actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >
                
                                    
                <button
                  aria-label="Resize"
                  class="fd-button fd-button--transparent"
                >
                  
                                        
                  <i
                    class="sap-icon--resize"
                  />
                  
                                    
                </button>
                
                                    
                <button
                  aria-label="Exit fullscreen"
                  class="fd-button fd-button--transparent"
                >
                  
                                        
                  <i
                    class="sap-icon--exitfullscreen"
                  />
                  
                                    
                </button>
                
                                    
                <button
                  aria-label="Close"
                  class="fd-button fd-button--transparent"
                >
                  
                                        
                  <i
                    class="sap-icon--decline"
                  />
                  
                                    
                </button>
                
                                
              </div>
              
                            
            </div>
            
                        
          </div>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-dynamic-page__subtitle"
      >
         Oversized multimaterial sneakers with quilted effect 
      </div>
      
            
    </div>
    
            
    <div
      aria-hidden="true"
      class="fd-dynamic-page__title-area fd-dynamic-page__title-area--collapsed"
      id="mainImageContainer"
      tabindex="0"
    >
      
                
      <div
        class="fd-dynamic-page__main-container"
      >
        
                    
        <div
          class="fd-dynamic-page__breadcrumb-title-container"
        >
          
                        
          <nav
            aria-label="Breadcrumbs"
          >
            
                            
            <ul
              class="fd-dynamic-page__breadcrumb fd-breadcrumb"
            >
              
                                
              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Men
                </a>
              </li>
              
                                
              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Shoes
                </a>
              </li>
              
                                
              <li
                class="fd-breadcrumb__item"
              >
                <a
                  aria-current="page"
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Running Shoes
                </a>
              </li>
              
                            
            </ul>
            
                        
          </nav>
          
                        
          <div
            class="fd-dynamic-page__title-container"
          >
            
                            
            <div
              class="fd-facet fd-facet--image fd-facet--image-header-title fd-margin-end--sm"
            >
              
                                
              <span
                aria-label="Avatar"
                class="fd-avatar fd-avatar--s"
              >
                
                                    
                <i
                  class="fd-avatar__icon sap-icon--money-bills"
                  role="presentation"
                />
                
                                
              </span>
              
                            
            </div>
            
                            
            <div
              class="fd-dynamic-page__title-subtitle-container"
            >
              
                                
              <h1
                class="fd-title fd-dynamic-page__title"
                title="Balenciaga Triple S Trainers"
              >
                 Balenciaga Triple S Trainers 
              </h1>
              
                                
              <div
                class="fd-dynamic-page__subtitle"
              >
                 Oversized multimaterial sneakers with quilted effect 
              </div>
              
                            
            </div>
            
                            
            <div
              class="fd-dynamic-page__toolbar-container"
            >
              
                                
              <div
                aria-label="Product actions"
                class="fd-dynamic-page__toolbar fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >
                
                                    
                <button
                  class="fd-button fd-button--compact fd-button--positive"
                >
                  Accept
                </button>
                
                                    
                <button
                  class="fd-button fd-button--compact fd-button--reject"
                >
                  Reject
                </button>
                
                                    
                <span
                  class="fd-toolbar__separator"
                />
                
                                
              </div>
              
                                
              <div
                aria-label="Navigation actions"
                class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar--actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >
                
                                    
                <button
                  aria-label="Resize"
                  class="fd-button fd-button--transparent"
                >
                  
                                        
                  <i
                    class="sap-icon--resize"
                  />
                  
                                    
                </button>
                
                                    
                <button
                  aria-label="Exit fullscreen"
                  class="fd-button fd-button--transparent"
                >
                  
                                        
                  <i
                    class="sap-icon--exitfullscreen"
                  />
                  
                                    
                </button>
                
                                    
                <button
                  aria-label="Close"
                  class="fd-button fd-button--transparent"
                >
                  
                                        
                  <i
                    class="sap-icon--decline"
                  />
                  
                                    
                </button>
                
                                
              </div>
              
                            
            </div>
            
                        
          </div>
          
                    
        </div>
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-dynamic-page__collapsible-header-container"
    >
      
                
      <div
        aria-hidden="false"
        aria-label="Dynamic Page Desktop Header"
        class="fd-dynamic-page__collapsible-header"
        id="fddplhvx6"
        role="region"
      >
        
                    
        <div
          class="fd-facet-group"
        >
          
                        
          <div
            class="fd-facet fd-facet--image fd-margin-end--md"
          >
            
                            
            <span
              aria-label="Avatar"
              class="fd-avatar fd-avatar--l"
            >
              
                                
              <i
                class="fd-avatar__icon sap-icon--money-bills"
                role="presentation"
              />
              
                            
            </span>
            
                        
          </div>
          
                        
          <div
            aria-labelledby="formFacetTitle4"
            class="fd-facet fd-facet--form fd-margin-end--md fd-margin-bottom--sm"
            role="group"
          >
            
                            
            <h1
              class="fd-title fd-title--h5 fd-margin-bottom--sm"
              id="formFacetTitle4"
            >
              Technical Data
            </h1>
            
                            
            <div
              class="fd-facet__container fd-margin-bottom--tiny"
            >
              
                                
              <label
                class="fd-form-label"
                for="form-value-10"
              >
                Base unit:
              </label>
              
                                
              <div
                class="fd-text"
                id="form-value-10"
              >
                Each
              </div>
              
                            
            </div>
            
                            
            <div
              class="fd-facet__container fd-margin-bottom--tiny"
            >
              
                                
              <label
                class="fd-form-label"
                for="form-value-11"
              >
                Length:
              </label>
              
                                
              <div
                class="fd-text"
                id="form-value-11"
              >
                23.24 Centimeter
              </div>
              
                            
            </div>
            
                            
            <div
              class="fd-facet__container fd-margin-bottom--tiny"
            >
              
                                
              <label
                class="fd-form-label"
                for="form-value-12"
              >
                Width:
              </label>
              
                                
              <div
                class="fd-text"
                id="form-value-12"
              >
                86.1 Centimeter
              </div>
              
                            
            </div>
            
                            
            <div
              class="fd-facet__container"
            >
              
                                
              <label
                class="fd-form-label"
                for="form-value-13"
              >
                Height:
              </label>
              
                                
              <div
                class="fd-text"
                id="form-value-13"
              >
                20.8 Centimeter
              </div>
              
                            
            </div>
            
                        
          </div>
          
                        
          <div
            aria-labelledby="kvFacetTitle9"
            class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
            role="group"
          >
            
                            
            <h1
              class="fd-title fd-title--h5 fd-margin-bottom--sm"
              id="kvFacetTitle9"
            >
              Status
            </h1>
            
                            
            <span
              class="fd-object-status fd-object-status--positive fd-object-status--large fd-facet__object-status"
            >
              
                                
              <span
                class="fd-object-status__text fd-facet__object-status-text"
              >
                Delivery
              </span>
              
                            
            </span>
            
                        
          </div>
          
                        
          <div
            aria-labelledby="kvFacetTitle10"
            class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
            role="group"
          >
            
                            
            <h1
              class="fd-title fd-title--h5 fd-margin-bottom--sm"
              id="kvFacetTitle10"
            >
              Delivery Time
            </h1>
            
                            
            <span
              class="fd-object-status fd-object-status--large fd-object-status--critical fd-facet__object-status"
            >
              
                                
              <i
                class="fd-object-status__icon sap-icon--shipping-status fd-padding--none fd-margin-end--tiny"
                role="presentation"
              />
              
                                
              <span
                class="fd-object-status__text fd-facet__object-status-text"
              >
                12 days
              </span>
              
                            
            </span>
            
                        
          </div>
          
                        
          <div
            aria-labelledby="kvFacetTitle11"
            class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
            role="group"
          >
            
                            
            <h1
              class="fd-title fd-title--h5 fd-margin-bottom--sm"
              id="kvFacetTitle11"
            >
              Assembly Option 
            </h1>
            
                            
            <span
              class="fd-object-status fd-object-status--negative fd-object-status--large fd-facet__object-status"
            >
              
                                
              <span
                class="fd-object-status__text fd-facet__object-status-text"
              >
                To be selected
              </span>
              
                            
            </span>
            
                        
          </div>
          
                        
          <div
            aria-labelledby="kvFacetTitle12"
            class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
            role="group"
          >
            
                            
            <h1
              class="fd-title fd-title--h5 fd-margin-bottom--sm"
              id="kvFacetTitle12"
            >
              Pricing 
            </h1>
            
                            
            <span
              class="fd-object-number fd-object-number--large fd-object-number--informative"
            >
              
                                
              <span
                class="fd-object-number__text"
              >
                579
              </span>
              <span
                class="fd-object-number__unit"
              >
                EUR
              </span>
              
                            
            </span>
            
                        
          </div>
          
                    
                        
          <div
            aria-labelledby="ratingFacetTitle3"
            class="fd-facet fd-facet--rating-indicator fd-margin-end--md  fd-margin-bottom--sm"
            role="group"
          >
            
                            
            <h1
              class="fd-title fd-title--h5 fd-margin-bottom--sm"
              id="ratingFacetTitle3"
            >
              Average User Rating
            </h1>
            
                            
            <h2
              class="fd-form-label"
            >
              6 reviews
            </h2>
            
                            
            <div
              class="fd-rating-indicator fd-facet__container"
            >
              
                                
              <div
                aria-label="Star Rating (out of 5)"
                class="fd-rating-indicator__container fd-facet__rating-container"
              >
                
                                
                <input
                  aria-label="1 star"
                  class="fd-rating-indicator__input"
                  id="2-rating-max-value-5-1"
                  name="2-rating-max-value-5"
                  type="radio"
                  value="1"
                />
                
                                
                <label
                  class="fd-rating-indicator__label"
                  for="2-rating-max-value-5-1"
                />
                
                    
                                
                <input
                  aria-label="2 star"
                  checked=""
                  class="fd-rating-indicator__input"
                  id="2-rating-max-value-5-2"
                  name="2-rating-max-value-5"
                  type="radio"
                  value="2"
                />
                
                                
                <label
                  class="fd-rating-indicator__label"
                  for="2-rating-max-value-5-2"
                />
                
                    
                                
                <input
                  aria-label="3 star"
                  class="fd-rating-indicator__input"
                  id="2-rating-max-value-5-3"
                  name="2-rating-max-value-5"
                  type="radio"
                  value="3"
                />
                
                                
                <label
                  class="fd-rating-indicator__label"
                  for="2-rating-max-value-5-3"
                />
                
                    
                                
                <input
                  aria-label="4 star"
                  class="fd-rating-indicator__input"
                  id="2-rating-max-value-5-4"
                  name="2-rating-max-value-5"
                  type="radio"
                  value="4"
                />
                
                                
                <label
                  class="fd-rating-indicator__label"
                  for="2-rating-max-value-5-4"
                />
                
                    
                                
                <input
                  aria-label="5 star"
                  class="fd-rating-indicator__input"
                  id="2-rating-max-value-5-5"
                  name="2-rating-max-value-5"
                  type="radio"
                  value="5"
                />
                
                                
                <label
                  class="fd-rating-indicator__label"
                  for="2-rating-max-value-5-5"
                />
                
                                
              </div>
              
                                
              <span
                class="fd-rating-indicator__dynamic-text fd-facet__rating-dynamic-text fd-margin-top--tiny"
              >
                (2 of 5)
              </span>
              
                            
            </div>
            
                        
          </div>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-dynamic-page__collapsible-header-visibility-container fd-dynamic-page__collapsible-header-visibility-container--no-shadow"
      >
        
                    
        <div
          class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
        />
        
                    
        <div
          aria-label="Header actions"
          class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
          role="toolbar"
        >
          
                        
          <button
            aria-controls="fddplhvx6"
            aria-expanded="true"
            aria-haspopup="true"
            aria-hidden="false"
            aria-label="Collapse"
            class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
            id="expandBtn"
            onclick="
                                        toggleElAttrs('fddplhvx6', ['aria-hidden']);
                                        toggleElAttrs('expandBtn', ['aria-expanded']);
                                        toggleElAttrs('expandBtn', ['aria-hidden']);
                                        toggleElAttrs('collapseBtn', ['aria-expanded']);
                                        toggleElAttrs('collapseBtn', ['aria-hidden']);
                                        toggleElAttrs('mainContainer', ['aria-hidden']);
                                        toggleElAttrs('mainImageContainer', ['aria-hidden']);
                                    "
          >
            
                                
            <i
              class="sap-icon--slim-arrow-up"
            />
            
                        
          </button>
          
                        
          <button
            aria-controls="fddplhvx6"
            aria-expanded="false"
            aria-haspopup="true"
            aria-hidden="true"
            aria-label="Collapse"
            class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
            id="collapseBtn"
            onclick="
                                        toggleElAttrs('fddplhvx6', ['aria-hidden']);
                                        toggleElAttrs('collapseBtn', ['aria-expanded']);
                                        toggleElAttrs('collapseBtn', ['aria-hidden']);
                                        toggleElAttrs('expandBtn', ['aria-expanded']);
                                        toggleElAttrs('expandBtn', ['aria-hidden']);
                                        toggleElAttrs('mainContainer', ['aria-hidden']);
                                        toggleElAttrs('mainImageContainer', ['aria-hidden']);
                                    "
          >
            
                                
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                        
          </button>
          
                        
          <button
            aria-label="Pin this"
            class="fd-dynamic-page__pin-button fd-button fd-button--compact"
          >
            
                                
            <i
              class="sap-icon--pushpin-off"
            />
            
                        
          </button>
          
                    
        </div>
        
                    
        <div
          class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-dynamic-page__tabs--overflow"
    >
      
                
      <ul
        class="fd-tabs fd-tabs--l fd-dynamic-page__tabs fd-dynamic-page__tabs--add-shadow"
        role="tablist"
      >
        
                    
        <li
          class="fd-tabs__item"
          role="tab"
        >
          
                        
          <a
            aria-controls="fuCwV557"
            class="fd-tabs__link"
            href="#fuCwV557"
          >
            
                            
            <span
              class="fd-tabs__tag"
            >
              
                                Link
                            
            </span>
            
                        
          </a>
          
                    
        </li>
        
                    
        <li
          aria-selected="true"
          class="fd-tabs__item"
          role="tab"
        >
          
                        
          <a
            aria-controls="AiWfz155"
            class="fd-tabs__link"
            href="#AiWfz155"
          >
            
                            
            <span
              class="fd-tabs__tag"
            >
              
                                Selected
                            
            </span>
            
                        
          </a>
          
                    
        </li>
        
                
      </ul>
      
            
    </div>
    
        
  </header>
  
        
  <div
    class="fd-dynamic-page__content"
  >
    
            
    <div
      aria-expanded="false"
      class="fd-tabs__panel"
      id="fuCwV557"
      role="tabpanel"
    >
      
                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam 
                eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid 
                dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
            
    </div>
    
            
    <div
      aria-expanded="true"
      class="fd-tabs__panel"
      id="AiWfz155"
      role="tabpanel"
    >
      
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
            
    </div>
    
        
  </div>
  
        
  <footer
    class="fd-bar fd-bar--floating-footer"
    style="position:relative"
  >
    
            
    <div
      aria-label="Finalizing actions"
      class="fd-bar__right"
      role="toolbar"
    >
      
                
      <div
        class="fd-bar__element"
      >
        
                    
        <button
          aria-label="button"
          class="fd-button fd-button--emphasized fd-button--compact"
        >
          Save
        </button>
        
                
      </div>
      
                
      <div
        class="fd-bar__element"
      >
        
                    
        <button
          aria-label="button"
          class="fd-button fd-button--transparent fd-button--compact"
        >
          Cancel
        </button>
        
                
      </div>
      
            
    </div>
    
        
  </footer>
  
    
</section>
`;

exports[`Storyshots Dev/Facets Facets in Object Page Mobile 1`] = `
<div
  class="mobile-container"
>
  
        
  <section
    aria-label="Dynamic Page Mobile Example"
    class="fd-dynamic-page fd-dynamic-page--sm"
  >
    
            
    <header
      class="fd-dynamic-page__header"
    >
      
                
      <div
        aria-hidden="false"
        class="fd-dynamic-page__title-area"
        id="mainContainerMobile"
        tabindex="0"
      >
        
                    
        <div
          class="fd-dynamic-page__main-container"
        >
          
                        
          <div
            class="fd-dynamic-page__breadcrumb-title-container"
          >
            
                            
            <div
              class="fd-dynamic-page__breadcrumb-container"
            >
              
                                
              <nav
                aria-label="Breadcrumbs"
              >
                
                                    
                <ul
                  class="fd-breadcrumb"
                >
                  
                                        
                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      class="fd-breadcrumb__link"
                      href="#"
                    >
                      Men
                    </a>
                  </li>
                  
                                        
                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      class="fd-breadcrumb__link"
                      href="#"
                    >
                      Shoes
                    </a>
                  </li>
                  
                                        
                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      aria-current="page"
                      class="fd-breadcrumb__link"
                      href="#"
                    >
                      Running Shoes
                    </a>
                  </li>
                  
                                    
                </ul>
                
                                
              </nav>
              
                                
              <div
                aria-label="Close action"
                class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar--actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >
                
                                    
                <button
                  aria-label="Close"
                  class="fd-button fd-button--transparent"
                >
                  
                                        
                  <i
                    class="sap-icon--decline"
                  />
                  
                                    
                </button>
                
                                
              </div>
              
                            
            </div>
            
                            
            <div
              class="fd-dynamic-page__title-container"
            >
              
                                
              <h1
                class="fd-title fd-dynamic-page__title"
                title="Balenciaga Triple S Trainers"
              >
                 Balenciaga Triple S Trainers 
              </h1>
              
                                
              <div
                aria-label="Product actions"
                class="fd-dynamic-page__toolbar fd-toolbar fd-toolbar--cozy fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >
                
                                    
                <div
                  class="fd-popover fd-toolbar__overflow"
                >
                  
                                        
                  <div
                    class="fd-popover__control"
                  >
                    
                                            
                    <button
                      aria-controls="wgxzK85901"
                      aria-expanded="true"
                      aria-haspopup="true"
                      aria-label="Header actions"
                      class="fd-button fd-button--transparent"
                      id="maisodusakdnsmb"
                      onclick="
                                                    toggleElAttrs('wgxzK85901', ['aria-hidden']);
                                                    toggleElAttrs('maisodusakdnsmb', ['aria-expanded']);
                                                "
                    >
                      
                                                
                      <i
                        class="sap-icon--overflow"
                      />
                      
                                            
                    </button>
                    
                                        
                  </div>
                  
                                        
                  <div
                    aria-hidden="false"
                    class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                    id="wgxzK85901"
                  >
                    
                                            
                    <div
                      class="fd-toolbar__overflow__body"
                    >
                      
                                                
                      <button
                        class="fd-button fd-button--transparent"
                      >
                        Accept
                      </button>
                      
                                                
                      <button
                        class="fd-button fd-button--transparent"
                      >
                        Reject
                      </button>
                      
                                            
                    </div>
                    
                                        
                  </div>
                  
                                    
                </div>
                
                                
              </div>
              
                            
            </div>
            
                        
          </div>
          
                    
        </div>
        
                    
        <div
          class="fd-dynamic-page__subtitle"
        >
           Expanded header in mobile 
        </div>
        
                
      </div>
      
                
      <div
        aria-hidden="true"
        class="fd-dynamic-page__title-area fd-dynamic-page__title-area--collapsed"
        id="mainImageContainerMobile"
        tabindex="0"
      >
        
                    
        <div
          class="fd-dynamic-page__main-container"
        >
          
                        
          <div
            class="fd-dynamic-page__breadcrumb-title-container"
          >
            
                            
            <div
              class="fd-dynamic-page__breadcrumb-container"
            >
              
                                
              <nav
                aria-label="Breadcrumbs"
              >
                
                                    
                <ul
                  class="fd-breadcrumb"
                >
                  
                                        
                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Men
                    </a>
                  </li>
                  
                                        
                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Shoes
                    </a>
                  </li>
                  
                                        
                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      aria-current="page"
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Running Shoes
                    </a>
                  </li>
                  
                                    
                </ul>
                
                                
              </nav>
              
                                
              <div
                aria-label="Close action"
                class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar--actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >
                
                                    
                <button
                  aria-label="Close"
                  class="fd-button fd-button--transparent"
                >
                  
                                        
                  <i
                    class="sap-icon--decline"
                  />
                  
                                    
                </button>
                
                                
              </div>
              
                            
            </div>
            
                            
            <div
              class="fd-dynamic-page__title-container"
            >
              
                                
              <div
                class="fd-facet fd-facet--image fd-facet--image-header-title fd-margin-end--sm"
              >
                
                                    
                <span
                  aria-label="Avatar"
                  class="fd-avatar fd-avatar--s"
                >
                  
                                        
                  <i
                    class="fd-avatar__icon sap-icon--money-bills"
                    role="presentation"
                  />
                  
                                    
                </span>
                
                                
              </div>
              
                                
              <div
                class="fd-dynamic-page__title-subtitle-container"
              >
                
                                    
                <h1
                  class="fd-title fd-dynamic-page__title"
                  title="Balenciaga Triple S Trainers"
                >
                   Balenciaga Triple S Trainers 
                </h1>
                
                                    
                <div
                  class="fd-dynamic-page__subtitle"
                >
                   Collapsed header in mobile 
                </div>
                
                                
              </div>
              
                                
              <div
                aria-label="Product actions"
                class="fd-dynamic-page__toolbar fd-toolbar fd-toolbar--cozy fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >
                
                                    
                <div
                  class="fd-popover fd-toolbar__overflow"
                >
                  
                                        
                  <div
                    class="fd-popover__control"
                  >
                    
                                            
                    <button
                      aria-controls="wgxzK85911"
                      aria-expanded="true"
                      aria-haspopup="true"
                      aria-label="Header actions"
                      class="fd-button fd-button--transparent"
                      id="maisodusakdnsmag"
                      onclick="
                                                    toggleElAttrs('wgxzK85911', ['aria-hidden']);
                                                    toggleElAttrs('maisodusakdnsmag', ['aria-expanded']);
                                                "
                    >
                      
                                                
                      <i
                        class="sap-icon--overflow"
                      />
                      
                                            
                    </button>
                    
                                        
                  </div>
                  
                                        
                  <div
                    aria-hidden="false"
                    class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                    id="wgxzK85911"
                  >
                    
                                            
                    <div
                      class="fd-toolbar__overflow__body"
                    >
                      
                                                
                      <button
                        class="fd-button fd-button--transparent"
                      >
                        Accept
                      </button>
                      
                                                
                      <button
                        class="fd-button fd-button--transparent"
                      >
                        Reject
                      </button>
                      
                                            
                    </div>
                    
                                        
                  </div>
                  
                                    
                </div>
                
                                
              </div>
              
                            
            </div>
            
                        
          </div>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-dynamic-page__collapsible-header-container"
      >
        
                    
        <div
          aria-hidden="false"
          aria-label="Dynamic Page Mobile Header"
          class="fd-dynamic-page__collapsible-header"
          id="fddplhvc7"
          role="region"
        >
          
                        
          <div
            class="fd-facet-group"
          >
            
                            
            <div
              class="fd-facet fd-facet--image fd-margin-end--sm fd-margin-bottom--tiny"
            >
              
                                
              <span
                aria-label="Avatar"
                class="fd-avatar fd-avatar--l"
              >
                
                                    
                <i
                  class="fd-avatar__icon sap-icon--camera"
                  role="presentation"
                />
                
                                
              </span>
              
                            
            </div>
            
                            
                            
            <div
              aria-labelledby="kvFacetTitle13"
              class="fd-facet fd-facet--key-value fd-margin-end--md  fd-margin-bottom--sm"
              role="group"
            >
              
                                
              <h1
                class="fd-title fd-title--h5 fd-margin-bottom--sm"
                id="kvFacetTitle13"
              >
                Availablity
              </h1>
              
                                
              <span
                class="fd-object-status fd-object-status--positive fd-object-status--large fd-facet__object-status"
              >
                
                                    
                <span
                  class="fd-object-status__text fd-facet__object-status-text"
                >
                  In Stock
                </span>
                
                                
              </span>
              
                            
            </div>
            
                            
            <div
              aria-labelledby="kvFacetTitle14"
              class="fd-facet fd-facet--key-value fd-margin-end--md  fd-margin-bottom--sm"
              role="group"
            >
              
                                
              <h1
                class="fd-title fd-title--h5 fd-margin-bottom--sm"
                id="kvFacetTitle14"
              >
                Price 
              </h1>
              
                                
              <span
                class="fd-object-number fd-object-number--large fd-object-number--informative"
              >
                
                                    
                <span
                  class="fd-object-number__text"
                >
                  750
                </span>
                <span
                  class="fd-object-number__unit"
                >
                  EUR
                </span>
                
                                
              </span>
              
                            
            </div>
            
                        
          </div>
          
                    
        </div>
        
                    
        <div
          class="fd-dynamic-page__collapsible-header-visibility-container fd-dynamic-page__collapsible-header-visibility-container--no-shadow"
        >
          
                        
          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
          />
          
                        
          <div
            aria-label="Header actions"
            class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
            role="toolbar"
          >
            
                            
            <button
              aria-controls="fddplhvc7"
              aria-expanded="true"
              aria-haspopup="true"
              aria-hidden="false"
              aria-label="Collapse header"
              class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
              id="expandBtnMobile"
              onclick="
                                        toggleElAttrs('fddplhvc7', ['aria-hidden']);
                                        toggleElAttrs('expandBtnMobile', ['aria-expanded']);
                                        toggleElAttrs('expandBtnMobile', ['aria-hidden']);
                                        toggleElAttrs('collapseBtnMobile', ['aria-expanded']);
                                        toggleElAttrs('collapseBtnMobile', ['aria-hidden']);
                                        toggleElAttrs('mainContainerMobile', ['aria-hidden']);
                                        toggleElAttrs('mainImageContainerMobile', ['aria-hidden']);
                                    "
            >
              
                                
              <i
                class="sap-icon--slim-arrow-up"
              />
              
                            
            </button>
            
                            
            <button
              aria-controls="fddplhvc7"
              aria-expanded="false"
              aria-haspopup="true"
              aria-hidden="true"
              aria-label="Expand header"
              class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
              id="collapseBtnMobile"
              onclick="
                                        toggleElAttrs('fddplhvc7', ['aria-hidden']);
                                        toggleElAttrs('collapseBtnMobile', ['aria-expanded']);
                                        toggleElAttrs('collapseBtnMobile', ['aria-hidden']);
                                        toggleElAttrs('expandBtnMobile', ['aria-expanded']);
                                        toggleElAttrs('expandBtnMobile', ['aria-hidden']);
                                        toggleElAttrs('mainContainerMobile', ['aria-hidden']);
                                        toggleElAttrs('mainImageContainerMobile', ['aria-hidden']);
                                    "
            >
              
                                
              <i
                class="sap-icon--slim-arrow-down"
              />
              
                            
            </button>
            
                        
          </div>
          
                        
          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
          />
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-dynamic-page__tabs--overflow"
      >
        
                    
        <ul
          class="fd-tabs fd-dynamic-page__tabs fd-dynamic-page__tabs--add-shadow"
          role="tablist"
        >
          
                        
          <li
            aria-controls="fuCwV559"
            class="fd-tabs__item"
            role="tab"
          >
            
                            
            <a
              class="fd-tabs__link"
              href="#fuCwV559"
            >
              
                                
              <span
                class="fd-tabs__tag"
              >
                
                                    Link
                                
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            aria-selected="true"
            class="fd-tabs__item"
            role="tab"
          >
            
                            
            <a
              aria-controls="AiWfz161"
              class="fd-tabs__link"
              href="#AiWfz161"
            >
              
                                
              <span
                class="fd-tabs__tag"
              >
                
                                    Selected
                                
              </span>
              
                            
            </a>
            
                        
          </li>
          
                    
        </ul>
          
                
      </div>
      
            
    </header>
    
            
    <div
      class="fd-dynamic-page__content"
    >
      
                
      <div
        aria-expanded="false"
        class="fd-tabs__panel"
        id="fuCwV559"
        role="tabpanel"
      >
        
                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam 
                    eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid 
                    dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
                
      </div>
      
                
      <div
        aria-expanded="true"
        class="fd-tabs__panel"
        id="AiWfz161"
        role="tabpanel"
      >
        
                    Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                    in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                    Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti 
                    in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                
      </div>
      
            
    </div>
    
            
    <footer
      class="fd-bar fd-bar--cozy fd-bar--floating-footer"
      style="position:relative"
    >
      
                
      <div
        aria-label="Finalizing actions"
        class="fd-bar__right"
        role="toolbar"
      >
        
                    
        <div
          class="fd-bar__element"
        >
          
                        
          <button
            aria-label="button"
            class="fd-button fd-button--emphasized"
          >
            Save
          </button>
          
                    
        </div>
        
                    
        <div
          class="fd-bar__element"
        >
          
                        
          <button
            aria-label="button"
            class="fd-button fd-button--transparent"
          >
            Cancel
          </button>
          
                    
        </div>
        
                
      </div>
      
            
    </footer>
    
        
  </section>
  
    
</div>
`;

exports[`Storyshots Dev/Facets Form Facet 1`] = `
<div
  aria-labelledby="formFacetTitle2"
  class="fd-facet fd-facet--form fd-margin-end--md fd-margin-bottom--sm"
  role="group"
>
  
        
  <h1
    class="fd-title fd-title--h5 fd-margin-bottom--sm"
    id="formFacetTitle2"
  >
     Technical Data 
  </h1>
  
        
  <div
    class="fd-facet__container fd-margin-bottom--tiny"
  >
    
            
    <label
      class="fd-form-label"
      for="form-value-01"
    >
      Base unit:
    </label>
    
            
    <div
      class="fd-text"
      id="form-value-01"
    >
      Each
    </div>
    
        
  </div>
  
        
  <div
    class="fd-facet__container fd-margin-bottom--tiny"
  >
    
            
    <label
      class="fd-form-label"
      for="form-value-02"
    >
      Length:
    </label>
    
            
    <div
      class="fd-text"
      id="form-value-02"
    >
      23.24 Centimeter
    </div>
    
        
  </div>
  
        
  <div
    class="fd-facet__container fd-margin-bottom--tiny"
  >
    
            
    <label
      class="fd-form-label"
      for="form-value-03"
    >
      Width:
    </label>
    
            
    <div
      class="fd-text"
      id="form-value-03"
    >
      86.1 Centimeter
    </div>
    
        
  </div>
  
        
  <div
    class="fd-facet__container"
  >
    
            
    <label
      class="fd-form-label"
      for="form-value-04"
    >
      Height:
    </label>
    
            
    <div
      class="fd-text"
      id="form-value-04"
    >
      20.8 Centimeter
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Dev/Facets Form Facet with Link 1`] = `
<div
  aria-labelledby="formFacetTitle3"
  class="fd-facet fd-facet--form fd-margin-end--md fd-margin-bottom--sm"
  role="group"
>
  
        
  <h1
    class="fd-title fd-title--h5 fd-margin-bottom--sm"
    id="formFacetTitle3"
  >
    Contact Information
  </h1>
  
        
  <div
    class="fd-facet__container fd-margin-bottom--tiny"
  >
    
            
    <i
      class="sap-icon--add-employee"
      role="presentation"
    />
    
            
    <div
      class="fd-text"
    >
      
                
      <a
        class="fd-link fd-margin-begin--tiny"
        href="#"
        tabindex="0"
      >
        John Miller
      </a>
      
            
    </div>
    
        
  </div>
  
        
  <div
    class="fd-facet__container fd-margin-bottom--tiny"
  >
    
            
    <i
      class="sap-icon--outgoing-call"
      role="presentation"
    />
    
            
    <div
      class="fd-text"
    >
      
                
      <a
        class="fd-link fd-margin-begin--tiny"
        href="#"
        tabindex="0"
      >
        +1 234 5678
      </a>
      
            
    </div>
    
        
  </div>
  
        
  <div
    class="fd-facet__container fd-margin-bottom--tiny"
  >
    
            
    <i
      class="sap-icon--email"
      role="presentation"
    />
    
            
    <div
      class="fd-text"
    >
      
                
      <a
        class="fd-link fd-margin-begin--tiny"
        href="#"
        tabindex="0"
      >
        john.miller@company.com
      </a>
      
            
    </div>
    
        
  </div>
  
        
  <div
    class="fd-facet__container"
  >
    
            
    <label
      class="fd-form-label"
      for="form-value-09"
    >
      Height:
    </label>
    
            
    <div
      class="fd-text"
      id="form-value-09"
    >
      20.8 Centimeter
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Dev/Facets Image/Avatar Facet 1`] = `
<div
  class="fd-facet fd-facet--image fd-margin-end--md"
>
  
        
  <span
    aria-label="Avatar"
    class="fd-avatar fd-avatar--l"
  >
    
            
    <i
      class="fd-avatar__icon sap-icon--money-bills"
      role="presentation"
    />
    
        
  </span>
  
    
</div>
`;

exports[`Storyshots Dev/Facets Key-Value Facet 1`] = `
<section>
  <div
    aria-labelledby="kvFacetTitle5"
    class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
        
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="kvFacetTitle5"
    >
       Status 
    </h1>
    
        
    <span
      class="fd-object-status fd-object-status--positive fd-object-status--large fd-facet__object-status"
    >
      
            
      <span
        class="fd-object-status__text fd-facet__object-status-text"
      >
        Delivery
      </span>
      
        
    </span>
    
    
  </div>
  
    
  <div
    aria-labelledby="kvFacetTitle6"
    class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
        
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="kvFacetTitle6"
    >
       Delivery Time 
    </h1>
    
        
    <span
      class="fd-object-status fd-object-status--negative fd-object-status--large fd-facet__object-status"
    >
      
            
      <span
        class="fd-object-status__text fd-facet__object-status-text"
      >
        12 days
      </span>
      
        
    </span>
    
    
  </div>
  
    
  <div
    aria-labelledby="kvFacetTitle7"
    class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
        
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="kvFacetTitle7"
    >
       Assembly Option 
    </h1>
    
        
    <span
      class="fd-object-status fd-object-status--critical fd-object-status--large fd-facet__object-status"
    >
      
            
      <span
        class="fd-object-status__text fd-facet__object-status-text"
      >
        To be selected
      </span>
      
        
    </span>
    
    
  </div>
  
    
  <div
    aria-labelledby="kvFacetTitle8"
    class="fd-facet fd-facet--key-value fd-margin-end--md fd-margin-bottom--sm"
    role="group"
  >
    
        
    <h1
      class="fd-title fd-title--h5 fd-margin-bottom--sm"
      id="kvFacetTitle8"
    >
       Pricing 
    </h1>
    
        
    <span
      class="fd-object-number fd-object-number--large "
    >
      
            
      <span
        class="fd-object-number__text"
      >
        -2,000.00
      </span>
      <span
        class="fd-object-number__unit"
      >
        EUR
      </span>
      
        
    </span>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Dev/Facets Rating Indicator Facet 1`] = `
<div
  aria-labelledby="ratingFacetTitle2"
  class="fd-facet fd-facet--rating-indicator fd-margin-end--md fd-margin-bottom--sm"
  role="group"
>
  
        
  <h1
    class="fd-title fd-title--h5 fd-margin-bottom--sm"
    id="ratingFacetTitle2"
  >
    Average User Rating
  </h1>
  
        
  <h2
    class="fd-form-label"
  >
    6 reviews
  </h2>
  
        
  <div
    class="fd-rating-indicator fd-facet__container"
  >
    
            
    <div
      aria-label="Star Rating (out of 5)"
      class="fd-rating-indicator__container fd-facet__rating-container"
    >
      
            
      <input
        aria-label="1 star"
        class="fd-rating-indicator__input"
        id="1-rating-max-value-5-1"
        name="1-rating-max-value-5"
        type="radio"
        value="1"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="1-rating-max-value-5-1"
      />
      

            
      <input
        aria-label="2 star"
        class="fd-rating-indicator__input"
        id="1-rating-max-value-5-2"
        name="1-rating-max-value-5"
        type="radio"
        value="2"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="1-rating-max-value-5-2"
      />
      

            
      <input
        aria-label="3 star"
        class="fd-rating-indicator__input"
        id="1-rating-max-value-5-3"
        name="1-rating-max-value-5"
        type="radio"
        value="3"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="1-rating-max-value-5-3"
      />
      

            
      <input
        aria-label="4 star"
        checked=""
        class="fd-rating-indicator__input"
        id="1-rating-max-value-5-4"
        name="1-rating-max-value-5"
        type="radio"
        value="4"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="1-rating-max-value-5-4"
      />
      

            
      <input
        aria-label="5 star"
        class="fd-rating-indicator__input"
        id="1-rating-max-value-5-5"
        name="1-rating-max-value-5"
        type="radio"
        value="5"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="1-rating-max-value-5-5"
      />
      
            
    </div>
    
            
    <span
      class="fd-rating-indicator__dynamic-text fd-facet__rating-dynamic-text fd-margin-top--tiny"
    >
      (4 of 5)
    </span>
    
        
  </div>
  
    
</div>
`;
